# cps630-project

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
services/chatter/: Cargo.toml  Dockerfile  captain-definition
services/chatter/src/: history.rs  main.rs  manager.rs  messages.rs  ws.rs
src/: app.css  app.d.ts  app.html  hooks.server.ts  types.d.ts
src/lib/: clickOutside.ts  databasedefs.ts  messages.ts  protectedPages.ts  state.ts  stores.ts  supabaseClient.ts
src/lib/Alerts/: Alerts.svelte  stores.ts
src/lib/Modal/: Modal.svelte
src/lib/Pages/: Listings.svelte
src/lib/chatter/: Chat.svelte  listeners.ts  msg.ts  stores.ts
src/lib/components/: Card.svelte  Carousel.svelte  ImageUpload.svelte  LoginSignup.svelte  Metric.svelte  Pfp.svelte  Table.svelte
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/admin/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/auth/callback/: +server.ts
src/routes/auth/verify/[user_id]/: +server.ts
src/routes/dashboard/: +page.svelte
src/routes/dashboard/[type]/: +page.svelte  old.svelte
src/routes/dashboard/create/: +page.svelte
src/routes/dashboard/createPost/: +page.svelte
src/routes/dashboard/listings/: +layout.svelte  Listings.svelte  stores.ts
src/routes/dashboard/sale/: +page.svelte
src/routes/dashboard/service/: +page.svelte
src/routes/dashboard/wanted/: +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
supabase/: config.toml
supabase/migrations/: 20240325191645_initial.sql
(+12 files in other folders)
